fix: horizontal scrollbar due to animation overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,7 @@
 body {
   font-family: var(--font-bricolage);
   @apply antialiased;
+  overflow: hidden;
 }
 
 .body-container {
